assets/scss/base/_utilities.scss
.skip {
    display: none;;
}
.button {
    border-radius: 25px;
    color: $white;
    text-transform: uppercase;
    text-decoration: none;
    background-color: $primary;
    padding: 15px 40px;
    margin: 10px 0;
    display: inline-block;
    font-size: .8em;
    transition: all 0.2s ease;
    font-weight: bold;
    letter-spacing: .1em;

    &:hover {
        background-color: $secondary;
    }

}

.pill-container {
    margin: 40px auto;

    @media (min-width: 768px){
    	margin: 40px 0;
    }
}

.pill {
    border-radius: 38px;
    color: $white;
    text-transform: uppercase;
    text-decoration: none;
    background-color: $primary;
    padding: 12px 24px;
    margin:   0 auto 10px auto;
    display: inline-block;
    width: auto;
    text-align: center;
    font-size: .8em;
    transition: all 0.2s ease;
    font-weight: bold;
    letter-spacing: .1em;
    @media (min-width: 576px){
        display: inline-block;

    }
    @media (min-width:768px) {
        padding: 18px 32px;
        width: auto;
        margin: 0 auto 10px auto;
        font-size: .8em;

    }

    @media (min-width: 992px) {

        font-size: .8em;
        padding: 12px 24px;
        margin: 0 10px 0 0;
    }

    &:hover {
        background-color: $secondary;
        color: $white;
    }
}

.button-alt {
    background-color: $secondary;

    &:hover {
        background-color: $primary;
    }

}
.card-container {
    display: grid;
    row-gap: 30px;
    width: 100%;
    grid-template-columns: 100%;


    @media (min-width:768px) {
        column-gap: 20px;
        row-gap:20px;
        grid-template-columns: 50% 50%;
    }
    @media (min-width: 992px) {
        column-gap: 30px;
        row-gap: 30px;
        grid-template-columns: 33% 33% 33%;
    }
    .card {
        width: auto;
        box-shadow: 1px 6px 17px -1px rgba(0,0,0,0.34);
        -webkit-box-shadow: 1px 6px 17px -1px rgba(0,0,0,0.34);
        -moz-box-shadow: 1px 6px 17px -1px rgba(0,0,0,0.34);
        border-radius: 5px;
        flex: 3;
        flex-direction: row;
        justify-content: space-between;
        align-items: stretch;
        flex-wrap: wrap;
        position: relative;
        
        img {
            width: 100%;
            height: auto;
            margin-bottom: 20px;
            border-top-right-radius: 5px;
            border-top-left-radius: 5px;
        }
        h3 {
            margin: 20px 0;
            padding: 0 20px;
        }
        h3 a {
            font-size: 1.6rem;

            @media (max-width: 991.98px){
                font-size: 2rem;
                line-height: 2.4rem;

            }
        }
        a.button {
            margin: 0 10px 20px 20px;
           
        }
        p {
            padding: 0 20px;
        }

        time {
            width: auto;
            padding: 20px;
            background-color: $secondary;
            color: $white;
            border-top-left-radius: 5px;
            opacity: .8;
            position: absolute;
            left: 0;
            top: 0;
        }
        footer {
            background-color: $gray;
            padding: 20px 20px 30px 20px;
            margin-top: 30px;
            width: 100%;

        }
        footer span.cat-links {
            line-height: 1.8rem;
        }
        footer a {
            padding: 0 5px;
        }
    }
    
    @media (min-width:768px) {
        .card {
            width: auto;
        }
        .card-full {
            width: 100%;
            column-gap: 0;
    
        }
    }
}

.card-container-full {
    display: block;
    row-gap: 40px;
    padding: 10px 20px;

    .card {
        box-shadow: 1px 6px 17px -1px rgba(0,0,0,0.34);
        -webkit-box-shadow: 1px 6px 17px -1px rgba(0,0,0,0.34);
        -moz-box-shadow: 1px 6px 17px -1px rgba(0,0,0,0.34);
        padding: 20px;

       img {
            width: 100%;
            height: auto;
        }
        
    }
    @media (min-width: 992px) {
      padding: 0;

          
    .card {
 
        img {
            height: 300px;
            width: 300px;
        }
    }
    }


    @media (min-width:768px) {
        .card {
            width: 100%;
        }

    }
}

